--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=VT323&display=swap');
 
+:root {
+	--document-margins: 1rem;
+	--text-font-size: 12pt;
+}
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	
-	--document-margins: 20px;
+	font-size: 12pt;
 }
 
 body {
-	display: flex;
-	/* Horizontal centering. */
-	justify-content: center;
-	/* Vertical centering, not needed. */
-	/* align-items: center; */
 	background-color: #f0f0f0;
 	font-family: "Roboto Mono", monospace;
 	font-optical-sizing: auto;
 	font-weight: 400;
 	font-style: normal;
+	width: 100vw;
 }
 
 #content {
-	max-width: calc(600px + var(--document-margins));
+	margin: var(--document-margins) auto;
+	
+	min-width: calc(500px - var(--document-margins));
+	max-width: calc(700px + var(--document-margins));
 	width: 90%;
+	
 	padding: 10px var(--document-margins);
 	background-color: white;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-	border-radius: 8px;
+	border-radius: 0.5rem;
 }
 
 header {
 	font-size: 32pt;
 	border-bottom: black solid 1px;
-	margin-bottom: 16px;
+	margin-bottom: 1rem;
 }
 
 ul, ol {
 	margin-left: calc(8px + var(--document-margins));
+}
+
+input {
+	padding: 0.25rem;
+	border: 1px solid #ddd;
+	border-radius: 5px;
+	color: #333;
+	transition: border-color 0.3s ease;
+	min-width: 0;
+	width: auto;
+}
+
+input:focus {
+	outline: none;
+	border-color: #007bff;
+	box-shadow: 0 0 5px rgba(0, 123, 255, 0.2);
+}
+
+input::placeholder {
+	color: #aaa;
+}
+
+.sub-title {
+	font-size: 18pt;
+	margin-top: 0.5rem;
+	margin-bottom: 0.25rem;
+	text-decoration: underline;
+}
+
+a,
+a:active {
+	color: blue;
+	text-decoration: none;
+}
+
+.spacer-full {
+	height: var(--text-font-size);
+}
+
+.spacer-half {
+	height: calc(var(--text-font-size) / 2);
+}
+
+.spacer-quarter {
+	height: calc(var(--text-font-size) / 4);
+}
+
+.spacer-eigth {
+	height: calc(var(--text-font-size) / 8);
 }
