--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=VT323&display=swap');
 
 :root {
 	--document-margins: 1rem;
@@ -10,22 +10,22 @@
 	padding: 0;
 	box-sizing: border-box;
 	
+	font-family: "Open Sans", sans-serif;
 	font-size: 12pt;
+	font-style: normal;
+	font-weight: 400;
+	font-optical-sizing: auto;
 }
 
 body {
 	background-color: #f0f0f0;
-	font-family: "Roboto Mono", monospace;
-	font-optical-sizing: auto;
-	font-weight: 400;
-	font-style: normal;
 }
 
 #content {
 	margin: var(--document-margins) auto;
 	
 	min-width: calc(500px - var(--document-margins));
-	max-width: calc(700px + var(--document-margins));
+	max-width: calc(800px + var(--document-margins));
 	width: 90%;
 	
 	padding: 10px var(--document-margins);
@@ -38,10 +38,6 @@ header {
 	font-size: 32pt;
 	border-bottom: black solid 1px;
 	margin-bottom: 1rem;
-}
-
-ul, ol {
-	margin-left: calc(8px + var(--document-margins));
 }
 
 input {
@@ -62,33 +58,4 @@ input:focus {
 
 input::placeholder {
 	color: #aaa;
-}
-
-.sub-title {
-	font-size: 18pt;
-	margin-top: 0.5rem;
-	margin-bottom: 0.25rem;
-	text-decoration: underline;
-}
-
-a,
-a:active {
-	color: blue;
-	text-decoration: none;
-}
-
-.spacer-full {
-	height: var(--text-font-size);
-}
-
-.spacer-half {
-	height: calc(var(--text-font-size) / 2);
-}
-
-.spacer-quarter {
-	height: calc(var(--text-font-size) / 4);
-}
-
-.spacer-eigth {
-	height: calc(var(--text-font-size) / 8);
 }
