--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 :root {
 	--document-margins: 1rem;
@@ -11,7 +11,7 @@
 	box-sizing: border-box;
 	
 	font-family: "Open Sans", sans-serif;
-	font-size: 12pt;
+	font-size: var(--text-font-size);
 	font-style: normal;
 	font-weight: 400;
 	font-optical-sizing: auto;
@@ -35,27 +35,7 @@ body {
 }
 
 header {
-	font-size: 32pt;
+	font-size: 3em;
 	border-bottom: black solid 1px;
 	margin-bottom: 1rem;
-}
-
-input {
-	padding: 0.25rem;
-	border: 1px solid #ddd;
-	border-radius: 5px;
-	color: #333;
-	transition: border-color 0.3s ease;
-	min-width: 0;
-	width: auto;
-}
-
-input:focus {
-	outline: none;
-	border-color: #007bff;
-	box-shadow: 0 0 5px rgba(0, 123, 255, 0.2);
-}
-
-input::placeholder {
-	color: #aaa;
 }
