--- a/styles.css
+++ b/styles.css
@@ -132,16 +132,17 @@ article blockquote {
 article code {
 	background-color: #f4f4f4;
 	padding: 2px 4px;
-	font-family: "Roboto Mono", serif;
-	font-size: 0.95em;
+	font-family: "Consolas", monospace;
+	/* font-size: 0.95em; */
 }
 article pre {
 	background-color: #f4f4f4;
 	padding-top: 24px;
 	border-radius: 8px;
 	overflow-x: auto;
-	font-size: 0.95em;
+	/* font-size: 0.95em; */
 	tab-size: 4;
+	font-family: "Consolas", monospace;
 }
 
 
