--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono');
 
 :root {
 	--document-margins: 1rem;
@@ -40,9 +41,9 @@ header {
 	margin-bottom: 1rem;
 }
 
-
+/* Article elements here for easy writing. */
 article {
-	line-height: 1.4;
+	line-height: 1.6;
 	color: #333;
 }
 
@@ -118,6 +119,10 @@ article ol {
 article li {
 	margin-bottom: 0.1em;
 }
+article ul, article ol {
+	font-size: inherit;
+	line-height: 1.6;
+}
 
 /* Blockquotes */
 article blockquote {
@@ -129,20 +134,30 @@ article blockquote {
 }
 
 /* Code */
+article code {
+	background-color: #f4f4f4;
+	color: #333;
+	font-family: "Roboto Mono", monospace;
+	padding: 2px 4px;
+	border-radius: 4px;
+	white-space: nowrap;
+	display: inline;
+	font-weight: 200;
+	font-size: 0.9rem;
+}
 article pre {
 	background-color: #f4f4f4;
 	padding-top: 1rem;
 	border-radius: 8px;
-	font-family: "Courier New", Courier, monospace;
-	overflow-x: auto;
+	font-family: "Roboto Mono", monospace;
 	line-height: 1.5;
 }
-article code {
+article pre code {
 	background-color: #282c34;
+	color: #f4f4f4;
 	display: block;
 	white-space: pre;
-	color: white;
-	font-family: "Courier New", Courier, monospace;
+	overflow-x: auto;
 	tab-size: 4;
 	padding: 1rem;
 }
