--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,8 @@ article code {
 	white-space: nowrap;
 	display: inline;
 	font-weight: 200;
-	font-size: 0.9rem;
+	/* font-size: 0.9rem; */
+	font-size: inherit;
 }
 article pre {
 	background-color: #f4f4f4;
@@ -151,6 +152,7 @@ article pre {
 	border-radius: 8px;
 	font-family: "Roboto Mono", monospace;
 	line-height: 1.5;
+	font-size: 0.9rem;
 }
 article pre code {
 	background-color: #282c34;
