feat: implement proper markdown support for writing articles

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -65,7 +65,7 @@ const projects: ProjectData[] = [
               ))}
             </div>
             <Button
-              variant="secondary"
+              variant="primary"
               class="w-full border-black border-1"
               href={project.link}
               target="_blank"
