--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 @import "katex/dist/katex.min.css";
 @import "@fortawesome/fontawesome-free/css/all.min.css";
