feat: migrate drop chance calculator article

--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -33,7 +33,10 @@ const { frontmatter } = Astro.props as Props;
       '[&_h4]:font-medium [&_h4]:mt-1 [&_h4]:mb-0',
       '[&_h5]:font-medium [&_h5]:mt-0 [&_h5]:mb-0',
 
+      '[&_li]:mt-0 [&_li]:mb-0.5',
       '[&_li.task-list-item]:list-none [&_li.task-list-item]:pl-0',
+
+      '[&_a]:text-blue-700 [&_a]:hover:no-underline',
       // your other prose-zinc color class if you want
       'prose-zinc'
     )}
