--- a/src/pages/games/index.astro
+++ b/src/pages/games/index.astro
@@ -2,4 +2,6 @@
 import BaseLayout from '@/layouts/BaseLayout.astro';
 ---
 
-<BaseLayout />
+<BaseLayout>
+  <h1 class="text-4xl text-center">Coming Soon!</h1>
+</BaseLayout>
