fix: update small text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,12 @@ import BaseLayout from '@/layouts/BaseLayout.astro';
           <i class="fa-brands fa-github"></i>
           <span>GitHub</span>
         </Button>
-        <Button id="download-cv-btn" variant="secondary" class="flex items-center space-x-2">
+        <Button
+          id="download-cv-btn"
+          variant="secondary"
+          class="flex items-center space-x-2"
+          href="/"
+        >
           <i class="fa-solid fa-download"></i>
           <span>Download CV</span>
         </Button>
